examples/errors/error_cycle_a.cay
// 循环包含 A -> B -> C -> A

#include "error_cycle_b.cay"

#define CYCLE_A 1
